force-app/main/default/objects/KDCE_DropOutOrder__c/KDCE_DropOutOrder__c.object-meta.xml
<CustomObject>
    <description>탈퇴 고객 중 Order에 대한 정보 분리 보관</description>
    <label>DropOut Order</label>
    <nameField>
        <displayFormat>DropOutOrder{YY}{MM}{DD}{000000}</displayFormat>
        <label>DropOutOrder Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DropOutOrders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>