force-app/main/default/objects/KDCE_DropOutOrder__c/fields/ActionChannel__c.field-meta.xml
<CustomField>
    <fullName>ActionChannel__c</fullName>
    <description>Order Action Channel</description>
    <label>Action Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>