force-app/main/default/objects/KDCE_DropOutOrder__c/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <description>Order Action Type</description>
    <label>Action Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>