force-app/main/default/objects/KDCE_DropOutOrder__c/fields/CollectCodentify__c.field-meta.xml
<CustomField>
    <fullName>CollectCodentify__c</fullName>
    <description>주문유형이 아래일 경우만, 값 필수 전달
ZTI(보상판매)
ZRN(렌탈 중고)
ZRNNEW(렌탈 신규)
ZRA(QURE)</description>
    <inlineHelpText>주문유형이 아래일 경우만, 값 필수 전달
ZTI(보상판매)
ZRN(렌탈 중고)
ZRNNEW(렌탈 신규)
ZRA(QURE)</inlineHelpText>
    <label>Collect Codentify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>