force-app/main/default/objects/KDCE_DropOutOrder__c/fields/CollectionStatusDate__c.field-meta.xml
<CustomField>
    <fullName>CollectionStatusDate__c</fullName>
    <label>Collection Status Date</label>
    <type>DateTime</type>
</CustomField>