force-app/main/default/objects/KDCE_DropOutOrder__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <externalId>true</externalId>
    <label>Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>