force-app/main/default/objects/KDCE_DropOutOrder__c/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <description>[KDCE] 고객번호
            Mapping Column : customer_id</description>
    <inlineHelpText>고객번호</inlineHelpText>
    <label>Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>