force-app/main/default/objects/KDCE_DropOutOrder__c/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <description>[KDCE] Magento Order PK
Mapping Column : entity_id</description>
    <label>Entity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>