force-app/main/default/objects/KDCE_DropOutOrder__c/fields/ExternalCollectionCompleteDate__c.field-meta.xml
<CustomField>
    <fullName>ExternalCollectionCompleteDate__c</fullName>
    <label>External Collection Complete Date</label>
    <type>Date</type>
</CustomField>