force-app/main/default/objects/KDCE_DropOutOrder__c/fields/KDCE_OrderId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KDCE_OrderId</label>
    <referenceTo>KDCE_Order__c</referenceTo>
    <relationshipLabel>DropOutOrders</relationshipLabel>
    <relationshipName>DropOutOrders</relationshipName>
    <type>Lookup</type>
</CustomField>