force-app/main/default/objects/KDCE_DropOutOrder__c/fields/NetPrice__c.field-meta.xml
<CustomField>
    <fullName>NetPrice__c</fullName>
    <description>[KDCE] 고객결제금액(VAT포함, 할인후)(배송비제외) 계
Mapping Column : net_price</description>
    <inlineHelpText>고객결제금액(VAT포함, 할인후)(배송비제외) 계</inlineHelpText>
    <label>Net Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>