force-app/main/default/objects/KDCE_DropOutOrder__c/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <description>[KDCE] 주문 생성 년월일시분초
            Mapping Column : order_date</description>
    <inlineHelpText>주문 생성 년월일시분초</inlineHelpText>
    <label>Order Date</label>
    <type>DateTime</type>
</CustomField>