force-app/main/default/objects/KDCE_DropOutOrder__c/fields/OrderNo__c.field-meta.xml
<CustomField>
    <fullName>OrderNo__c</fullName>
    <description>[KDCE] 주문번호
            Mapping Column : order_no</description>
    <inlineHelpText>주문번호</inlineHelpText>
    <label>Order No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>