force-app/main/default/objects/KDCE_DropOutOrder__c/fields/OrderState__c.field-meta.xml
<CustomField>
    <fullName>OrderState__c</fullName>
    <description>Order State (주문 상태 2)</description>
    <label>Order State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>