force-app/main/default/objects/KDCE_DropOutOrder__c/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <description>[KDCE] 주문타입
ZTA(일반주문)
ZTI(보상판매)
ZRN(렌탈 중고)
ZRNNEW(렌탈 신규)
ZRA(QURE)</description>
    <inlineHelpText>주문타입</inlineHelpText>
    <label>Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>