force-app/main/default/objects/KDCE_DropOutOrder__c/fields/OriginOrder__c.field-meta.xml
<CustomField>
    <fullName>OriginOrder__c</fullName>
    <label>OriginOrder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>