force-app/main/default/objects/KDCE_DropOutOrder__c/fields/PromotionName__c.field-meta.xml
<CustomField>
    <fullName>PromotionName__c</fullName>
    <description>[KDCE] 프로모션 명
Mapping Column : promotion_name</description>
    <inlineHelpText>프로모션 명</inlineHelpText>
    <label>Promotion Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>