force-app/main/default/objects/KDCE_DropOutOrder__c/fields/QureCase__c.field-meta.xml
<CustomField>
    <fullName>QureCase__c</fullName>
    <label>QureCase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>