force-app/main/default/objects/KDCE_DropOutOrder__c/fields/QureCaseNo__c.field-meta.xml
<CustomField>
    <fullName>QureCaseNo__c</fullName>
    <description>[KDCE] IF 수신정보 보관용 Qure Case No</description>
    <label>QureCaseNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>