force-app/main/default/objects/KDCE_DropOutOrder__c/fields/ReturnEndDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnEndDate__c</fullName>
    <label>Return End Date</label>
    <type>Date</type>
</CustomField>