force-app/main/default/objects/KDCE_DropOutOrder__c/fields/ReturnStartDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnStartDate__c</fullName>
    <label>Return Start Date</label>
    <type>Date</type>
</CustomField>