force-app/main/default/objects/KDCE_DropOutOrder__c/fields/ShippingAddress1__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress1__c</fullName>
    <description>[KDCE] 배송지 주소1
Mapping Column : shipping_address1</description>
    <inlineHelpText>배송지 주소1</inlineHelpText>
    <label>Shipping Address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>