force-app/main/default/objects/KDCE_DropOutOrder__c/fields/ShippingAddress2__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress2__c</fullName>
    <description>[KDCE] 배송지 주소2
Mapping Column : shipping_address2</description>
    <inlineHelpText>배송지 주소2</inlineHelpText>
    <label>Shipping Address2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>