force-app/main/default/objects/KDCE_DropOutOrder__c/fields/ShippingEndDate__c.field-meta.xml
<CustomField>
    <fullName>ShippingEndDate__c</fullName>
    <label>Shipping End Date</label>
    <type>Date</type>
</CustomField>