force-app/main/default/objects/KDCE_DropOutOrder__c/fields/ShippingMessage__c.field-meta.xml
<CustomField>
    <fullName>ShippingMessage__c</fullName>
    <label>Shipping Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>