force-app/main/default/objects/KDCE_DropOutOrder__c/fields/ShipQuantity__c.field-meta.xml
<CustomField>
    <fullName>ShipQuantity__c</fullName>
    <description>배송처리수량</description>
    <label>Ship Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>