force-app/main/default/objects/KDCE_DropOutOrder__c/fields/ShipStatus__c.field-meta.xml
<CustomField>
    <fullName>ShipStatus__c</fullName>
    <description>배송처리상태</description>
    <label>Ship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>READY_FOR_DELIVERY</fullName>
            </value>
            <value>
                <fullName>DELIVERY_COLLECTION</fullName>
            </value>
            <value>
                <fullName>COMPLETE_DELIVERY</fullName>
            </value>
            <value>
                <fullName>CANCLE_ORDER</fullName>
            </value>
            <value>
                <fullName>START_RETURN_ORDER</fullName>
            </value>
            <value>
                <fullName>WAIT_COLLECTION</fullName>
            </value>
            <value>
                <fullName>RETRYING</fullName>
            </value>
            <value>
                <fullName>DONE_COLLECTION</fullName>
            </value>
            <value>
                <fullName>WAIT_COLLECTION_FAIL</fullName>
            </value>
            <value>
                <fullName>RETURN_PENDING</fullName>
            </value>
            <value>
                <fullName>COMPLETE_RETURN_ORDER</fullName>
            </value>
            <value>
                <fullName>RETURN_CONFIRM</fullName>
            </value>
            <value>
                <fullName>RETUN_REJECT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>