force-app/main/default/objects/KDCE_DropOutOrder__c/fields/TrackingNo__c.field-meta.xml
<CustomField>
    <fullName>TrackingNo__c</fullName>
    <description>운송장번호</description>
    <label>Tracking No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>